[package]
name = "keccak-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
tiny-keccak = { version =" 2.0.2", features = ["keccak"]}

[dev-dependencies]
criterion = "0.4"

[patch.crates-io]
# tiny-keccak = { path = "../tiny-keccak" }

[[bench]]
name = "speed"
harness = false
